test/expected/declare_o_qmark_colon_k2i_i.out
struct S; declare ?: as operator (S, int, int) returning int
         ^
10: error: operator ?: can not be overloaded
